--- a/package.json
+++ b/package.json
@@ -1,12 +1,17 @@
 {
-  "name": "d3charts-tt",
-  "version": "1.0.0",
+  "name": "@ilmsolutions/d3charts-tt",
+  "version": "1.0.2",
   "description": "shared chart library",
   "main": "dist/index.js",
+  "types": "./dist/index.d.ts",
   "scripts": {
     "build": "tsc",
     "prepare": "npm run build",
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ilmsolutions/d3charts-tt.git"
   },
   "keywords": [
     "d3",
@@ -19,5 +24,10 @@
   "dependencies": {
     "@types/d3": "^5.16.0",
     "d3": "^5.16.0"
-  }
+  },
+  "bugs": {
+    "url": "https://github.com/ilmsolutions/d3charts-tt/issues"
+  },
+  "homepage": "https://github.com/ilmsolutions/d3charts-tt#readme",
+  "devDependencies": {}
 }
